--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,44 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Env files (keep secrets out of git)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+/build
+/dist
+/out
+/.next
+/public/build
+
+# Caches
+.cache
+.parcel-cache
+.vite
+.pnpm-store
+/.turbo
+
+# Coverage
+coverage/
+.nyc_output/
+
+# System / editor
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+*.swp
+.vscode/
+*.log
+
+# Netlify local state (keep netlify.toml!)
+.netlify/
+netlify/
